RESOLVED FIXED65030
Avoiding painting backgrounds if they are fully obscures by an object's foreground
https://bugs.webkit.org/show_bug.cgi?id=65030
Summary Avoiding painting backgrounds if they are fully obscures by an object's foreg...
Simon Fraser (smfr)
Reported 2011-07-22 10:20:33 PDT
We shouldn't waste time painting backgrounds for things like images, for which it's easy to determine that the foreground fully obscures that background. This helps particularly in cases where the background might contain an animated "loading" image; that currently causes continual repaints, and it should not.
Attachments
Patch (11.90 KB, patch)
2011-07-22 15:13 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-07-22 10:56:53 PDT
This is only going to work for JPEG initially: bug 65033.
Simon Fraser (smfr)
Comment 2 2011-07-22 15:13:23 PDT
mitz
Comment 3 2011-07-22 17:02:42 PDT
Comment on attachment 101774 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=101774&action=review > Source/WebCore/ChangeLog:8 > + Some pages used animated loading GIFs as the background of <img>, Confused by the use of “used” in the past tense. > Source/WebCore/rendering/RenderImage.cpp:411 > + if (!image->isBitmapImage()) I think you need to null-check image.
Simon Fraser (smfr)
Comment 4 2011-07-22 17:40:45 PDT
Ryosuke Niwa
Comment 5 2011-07-22 18:52:33 PDT
This patch seems to have caused a crash on Chromium Linux: http://build.webkit.org/results/Chromium%20Linux%20Release%20(Tests)/r91628%20(21410)/results.html http://build.webkit.org/results/Chromium%20Linux%20Release%20(Flexbox)/r91628%20(1508)/results.html Given these are two different bots, I highly doubt that this is a flake. Unfortunately, these are release builds so we can't get stack trace out of them. There's also one failing test on Chromium Mac: http://build.webkit.org/results/Chromium%20Mac%20Release%20(Tests)/r91628%20(9716)/results.html But I'm not certain if this is a real regression or just a flakiness.
Simon Fraser (smfr)
Comment 6 2011-07-29 16:02:22 PDT
Do we have any more information on whether those crashes persisted?
Ryosuke Niwa
Comment 7 2011-07-29 16:40:19 PDT
Simon Fraser (smfr)
Comment 8 2011-07-30 08:56:25 PDT
Odd that it's just Linux that's crashing.
Ryosuke Niwa
Comment 9 2011-07-30 10:16:50 PDT
(In reply to comment #8) > Odd that it's just Linux that's crashing. It's possible that there's a cr-linux or skia bug; or that only cr-linux hit some specific timing.
Simon Fraser (smfr)
Comment 10 2011-08-01 10:36:09 PDT
Let's continue discussing the crashes in bug 65063.
Note You need to log in before you can comment on or make changes to this bug.